feat : add hyperlink

--- a/resource.qrc
+++ b/resource.qrc
@@ -7,5 +7,22 @@
         <file>images/mor.webp</file>
         <file>images/messi.webp</file>
         <file>images/1103500.png</file>
+        <file>images/korHL.webp</file>
+        <file>images/news/Argentina-v-France-Final-FIFA-World-Cup-Qatar-2022 (1).webp</file>
+        <file>images/news/Argentina-v-France-Final-FIFA-World-Cup-Qatar-2022 (2).webp</file>
+        <file>images/news/Argentina-v-France-Final-FIFA-World-Cup-Qatar-2022 (3).webp</file>
+        <file>images/news/Argentina-v-France-Final-FIFA-World-Cup-Qatar-2022.webp</file>
+        <file>images/news/Messi-wins-thumbnail-argentina.webp</file>
+        <file>images/news/Tunisia-v-France-Group-D-FIFA-World-Cup-Qatar-2022.webp</file>
+        <file>images/goal_highlight/ALL_GOALS_ATLETICO.webp</file>
+        <file>images/goal_highlight/ALL_GOALS_BARCELONA.webp</file>
+        <file>images/goal_highlight/ALL_GOALS_CHELSEA.webp</file>
+        <file>images/goal_highlight/ALL_GOALS_MAN_CITY.webp</file>
+        <file>images/goal_highlight/ALL_GOALS_MILAN.webp</file>
+        <file>images/highlight/CRO_MAR_3rd_FWC22_THUMB_V1.webp</file>
+        <file>images/highlight/ENG_FRA_QF_FWC22_THUMB_V3.webp</file>
+        <file>images/highlight/FRA_MAR_SF_FW22.webp</file>
+        <file>images/highlight/highlight.webp</file>
+        <file>images/highlight/ARG_FRA_FINAL_FWC22_THUMB_V4.webp</file>
     </qresource>
 </RCC>
